RESOLVED FIXED 264217
[Cocoa] Thread-unsafe use of Vector in WebAVSampleBufferErrorListener
https://bugs.webkit.org/show_bug.cgi?id=264217
Summary [Cocoa] Thread-unsafe use of Vector in WebAVSampleBufferErrorListener
Andy Estes
Reported 2023-11-04 14:58:52 PDT
[Cocoa] Thread-unsafe use of Vector in WebAVSampleBufferErrorListener
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-04 14:59:02 PDT
Andy Estes
Comment 2 2023-11-04 15:05:45 PDT
EWS
Comment 3 2023-11-04 19:12:58 PDT
Committed 270237@main (66793be1c5e2): <https://commits.webkit.org/270237@main> Reviewed commits have been landed. Closing PR #20004 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.